<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>cucumber-wizeline</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <cucumber.version> 1.2.5 </cucumber.version>
        <selenium.version> 3.141.59 </selenium.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <report.version>3.20.0</report.version>

    </properties>

    <dependencies>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>info.cukes</groupId>-->
        <!--            <artifactId>cucumber-testng</artifactId>-->
        <!--            <version>${cucumber.version}</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>


        <!-- https://mvnrepository.com/artifact/faker/faker -->
        <!-- https://mvnrepository.com/artifact/org.webjars.npm/faker -->
        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>



        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>${report.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compile code -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Run testcase/ test suite -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                                <configuration>
                                    <testFailureIgnore>true</testFailureIgnore>
                                    <includes>
                                        <include>**/*/TestRunner.java</include>
                                    </includes>
                                </configuration>
<!--                <configuration>-->
<!--                    <parallel>classes</parallel>-->
<!--                    <testFailureIgnore>true</testFailureIgnore>-->
<!--                    <forkMode>perthread</forkMode>-->
<!--                    <threadCount>3</threadCount>-->
<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
<!--                    <includes>-->
<!--                        <include>**/*/TestRunner.java</include>-->
<!--                    </includes>-->
<!--                </configuration>-->
            </plugin>

            <!-- Generate report -->
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>${report.version}</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>SELENIUM ONLINE - BANK GURU</projectName>

                            <outputDirectory>${project.build.directory}/site/cucumber-reporting</outputDirectory>
                            <inputDirectory>${project.build.directory}/site</inputDirectory>
                            <!--                             <cucumberOutput>${project.build.directory}/site/cucumber.json</cucumberOutput>-->
                            <jsonFiles>
                                <param>**/*.json</param>
                            </jsonFiles>
                            <!--                             <skippedFails>true</skippedFails>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>